Add Faculty code

--- a/Solutions/Loops/Loops.csproj
+++ b/Solutions/Loops/Loops.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Faculty.cs" />
     <Compile Include="FizzBuzz.cs" />
+    <Compile Include="Loops.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
