Exc. number 6 done

--- a/Solutions/OOP/OOP.csproj
+++ b/Solutions/OOP/OOP.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="KaffeeGeschaeft.cs" />
     <Compile Include="Kaffeemaschine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
