--- a/Solutions/OOP/OOP.csproj
+++ b/Solutions/OOP/OOP.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Complex.cs" />
     <Compile Include="KaffeeGeschaeft.cs" />
     <Compile Include="Kaffeemaschine.cs" />
+    <Compile Include="OOP.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
