--- a/Solutions/OOP/OOP.csproj
+++ b/Solutions/OOP/OOP.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Arena.cs" />
     <Compile Include="Baummarder.cs" />
     <Compile Include="Complex.cs" />
     <Compile Include="Eichhoernchen.cs" />
